// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloorItemRow Component Renders a FloorItem 1`] = `
<Context.Provider
  value={
    Object {
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "onStateChange": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <FloorItemRow
    dispatch={[MockFunction]}
    item={
      Object {
        "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
        "itemNbr": 980078597,
        "locationType": 8,
        "price": 2.4,
        "upcNbr": "123456789098",
      }
    }
  />
</Context.Provider>
`;

exports[`FloorItemRow Component Renders a FloorItem with a long name 1`] = `
<Context.Provider
  value={
    Object {
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "onStateChange": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <FloorItemRow
    dispatch={[MockFunction]}
    item={
      Object {
        "itemDesc": "An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description",
        "itemNbr": 980078597,
        "locationType": 8,
        "price": 2.4,
        "upcNbr": "123456789098",
      }
    }
  />
</Context.Provider>
`;
